--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^3.4",
+        "rap2hpoutre/laravel-log-viewer": "^2.3",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
